--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,7 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
   }
 }
