--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "bootstrap-notify": "3.1.3",
     "chartist": "0.11.4",
     "classlist.js": "1.1.20150312",
+    "dotenv": "^16.4.5",
     "eslint": "^8.11.0",
     "express": "4.17.3",
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
     "jquery": "3.6.0",
-    "moment": "2.29.1",
+    "moment": "^2.29.1",
     "mongoose": "^8.3.5",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
