--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@types/ws": "^8.5.10",
     "ajv": "8.11.0",
     "arrive": "2.4.1",
     "bootstrap": "4.6.1",
@@ -48,7 +49,9 @@
     "popper.js": "1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typescript": "^4.8.4",
     "web-animations-js": "2.3.2",
+    "ws": "^8.17.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -64,6 +67,7 @@
     "@types/jquery": "3.5.6",
     "@types/node": "^17.0.21",
     "codelyzer": "6.0.2",
+    "typescript": "4.8.4",
     "concurrently": "^8.2.2",
     "jasmine-core": "~4.4.0",
     "jasmine-spec-reporter": "~7.0.0",
@@ -75,7 +79,6 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "protractor": "7.0.0",
     "sass": "1.32.13",
-    "ts-node": "~10.9.1",
-    "typescript": "~4.7.2"
+    "ts-node": "~10.9.1"
   }
 }
