--- a/package.json
+++ b/package.json
@@ -32,12 +32,18 @@
     "@angular/router": "^14.2.0",
     "@types/ws": "^8.5.10",
     "ajv": "8.11.0",
+    "angular-datatables": "^14.0.2",
     "arrive": "2.4.1",
     "bootstrap": "4.6.1",
+    "bootstrap-icons": "^1.11.3",
     "bootstrap-material-design": "4.1.3",
     "bootstrap-notify": "3.1.3",
     "chartist": "0.11.4",
     "classlist.js": "1.1.20150312",
+    "datatables.net": "^1.13.1",
+    "datatables.net-buttons": "^2.3.4",
+    "datatables.net-buttons-dt": "^2.3.4",
+    "datatables.net-dt": "^1.13.1",
     "dotenv": "^16.4.5",
     "eslint": "^8.11.0",
     "express": "4.17.3",
@@ -62,13 +68,13 @@
     "@angular/language-service": "14.2.0",
     "@types/bootstrap": "4.5.0",
     "@types/chartist": "0.11.1",
+    "@types/datatables.net": "^1.10.24",
     "@types/google.maps": "3.47.4",
     "@types/jasmine": "~4.0.0",
     "@types/jasminewd2": "~2.0.10",
     "@types/jquery": "3.5.6",
     "@types/node": "^17.0.21",
     "codelyzer": "6.0.2",
-    "typescript": "4.8.4",
     "concurrently": "^8.2.2",
     "jasmine-core": "~4.4.0",
     "jasmine-spec-reporter": "~7.0.0",
@@ -80,6 +86,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "protractor": "7.0.0",
     "sass": "1.32.13",
-    "ts-node": "~10.9.1"
+    "ts-node": "~10.9.1",
+    "typescript": "4.8.4"
   }
 }
