--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jquery": "3.6.0",
     "moment": "^2.29.1",
     "mongoose": "^8.3.5",
+    "multer": "^1.4.5-lts.1",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
     "rxjs": "~7.5.0",
@@ -68,7 +69,6 @@
     "@types/jquery": "3.5.6",
     "@types/node": "^17.0.21",
     "codelyzer": "6.0.2",
-    "typescript": "4.8.4",
     "concurrently": "^8.2.2",
     "jasmine-core": "~4.4.0",
     "jasmine-spec-reporter": "~7.0.0",
@@ -80,6 +80,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "protractor": "7.0.0",
     "sass": "1.32.13",
-    "ts-node": "~10.9.1"
+    "ts-node": "~10.9.1",
+    "typescript": "4.8.4"
   }
 }
