--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
     "bootstrap-notify": "3.1.3",
     "chartist": "0.11.4",
     "classlist.js": "1.1.20150312",
-    "datatables.net": "^1.13.1",
+    "datatables.net": "^1.13.11",
+    "datatables.net-bs5": "^1.11.3",
     "datatables.net-buttons": "^2.3.4",
     "datatables.net-buttons-dt": "^2.3.4",
-    "datatables.net-dt": "^1.13.1",
+    "datatables.net-dt": "^1.13.11",
     "dotenv": "^16.4.5",
     "eslint": "^8.11.0",
     "express": "4.17.3",
@@ -72,7 +73,7 @@
     "@types/google.maps": "3.47.4",
     "@types/jasmine": "~4.0.0",
     "@types/jasminewd2": "~2.0.10",
-    "@types/jquery": "3.5.6",
+    "@types/jquery": "^3.5.6",
     "@types/node": "^17.0.21",
     "codelyzer": "6.0.2",
     "concurrently": "^8.2.2",
