add pipe thaidate and Edit services

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "dev": "concurrently \"mongod\" \"node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve \" \"tsc -w -p server\" \"nodemon dist/server/app.js\"",
+    "web-dev": "concurrently \"node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve \"",
+    "api-dev": "concurrently  \"mongod\" \"tsc -w -p server\" \"nodemon dist/server/app.js\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
