--- a/package.json
+++ b/package.json
@@ -50,13 +50,14 @@
     "express": "4.17.3",
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
-    "jquery": "3.6.0",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "mongoose": "^8.3.5",
     "multer": "^1.4.5-lts.1",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.11.0",
     "tslib": "^2.3.0",
     "typescript": "^4.8.4",
     "web-animations-js": "2.3.2",
