--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "express": "4.17.3",
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
+    "html2canvas": "^1.4.1",
     "jquery": "3.6.0",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.1",
     "mongoose": "^8.3.5",
     "multer": "^1.4.5-lts.1",
