--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/ws": "^8.5.10",
     "ajv": "8.11.0",
     "angular-datatables": "^14.0.2",
@@ -46,13 +48,17 @@
     "datatables.net-buttons-dt": "^2.3.4",
     "datatables.net-dt": "^1.13.11",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "eslint": "^8.11.0",
     "express": "4.17.3",
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
+    "html-pdf-node": "^1.0.8",
+    "html2canvas": "^1.4.1",
     "jquery": "3.6.0",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^8.3.5",
+    "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
