--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/chartist": "0.11.1",
     "@types/datatables.net": "^1.10.24",
     "@types/google.maps": "3.47.4",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~4.0.0",
     "@types/jasminewd2": "~2.0.10",
     "@types/jquery": "^3.5.6",
