--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               "src/assets/scss/material-dashboard.scss",
               "src/assets/css/demo.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "node_modules/datatables.net-bs5/css/dataTables.bootstrap5.min.css"
+             
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -39,8 +39,13 @@
               "node_modules/bootstrap-notify/bootstrap-notify.js",
               "node_modules/chartist/dist/chartist.js",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js",
               "node_modules/datatables.net/js/jquery.dataTables.min.js",
-              "node_modules/datatables.net-bs5/js/dataTables.bootstrap5.min.js"
+              "node_modules/datatables.net-bs5/js/dataTables.bootstrap5.min.js",
+              "node_modules/datatables.net-buttons/js/buttons.colVis.js",
+              "node_modules/datatables.net-buttons/js/buttons.flash.js",
+              "node_modules/datatables.net-buttons/js/buttons.html5.js",
+              "node_modules/datatables.net-buttons/js/buttons.print.js"
             ],
             "allowedCommonJsDependencies": [
               "rxjs/add/operator/filter",
