--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
               "src/assets/scss/material-dashboard.scss",
               "src/assets/css/demo.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "node_modules/datatables.net-bs5/css/dataTables.bootstrap5.min.css"
+              "node_modules/datatables.net-bs5/css/dataTables.bootstrap5.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css"
              
             ],
             "scripts": [
