--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",  
+    "start": "ng serve",
     "web-dev": "concurrently \"node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve \"",
     "dev": "concurrently \"mongod\" \"node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve \" \"tsc -w -p server\" \"nodemon dist/server/app.js\"",
     "api-dev": "concurrently  \"mongod\" \"tsc -w -p server\" \"nodemon dist/server/app.js\"",
@@ -32,6 +32,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@types/ws": "^8.5.10",
     "ajv": "8.11.0",
     "angular-datatables": "^14.0.2",
