--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@types/multer": "^1.4.11",
     "@types/ws": "^8.5.10",
     "ajv": "8.11.0",
     "angular-datatables": "^14.0.2",
