--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
-    "@types/multer": "^1.4.11",
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "@types/sequelize": "^4.28.20",
     "@types/ws": "^8.5.10",
     "ajv": "8.11.0",
@@ -74,6 +74,7 @@
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
     "sweetalert2": "^11.11.0",
+    "tesseract.js": "^5.1.0",
     "tslib": "^2.3.0",
     "typescript": "^4.8.4",
     "web-animations-js": "2.3.2",
