--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ajv": "8.11.0",
     "angular-datatables": "^14.0.2",
     "arrive": "2.4.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bootstrap": "4.6.1",
     "bootstrap-icons": "^1.11.3",
@@ -63,6 +64,7 @@
     "html-pdf-node": "^1.0.8",
     "html2canvas": "^1.4.1",
     "jquery": "3.6.0",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
     "moment": "^2.30.1",
     "mongoose": "^8.3.5",
