--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,5 @@ MONGODB_TEST_URI=mongodb://localhost:27017/Angular-Project
 
 SECRET_TOKEN=catswillruletheworld
 PORT=3000
+EMAIL=your_email@gmail.com
+EMAIL_PASSWORD=your_email_password
