--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "multer": "^1.4.5-lts.1",
     "ng2-pdf-viewer": "^6.4.0",
     "ngx-extended-pdf-viewer": "^14.5.3",
+    "nodemailer": "^6.9.14",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
     "rxjs": "~7.5.0",
