--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/ws": "^8.5.10",
     "ajv": "8.11.0",
     "angular-datatables": "^14.0.2",
+    "angular2-signaturepad": "^3.0.4",
     "arrive": "2.4.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -71,8 +72,9 @@
     "mongoose": "^8.3.5",
     "multer": "^1.4.5-lts.1",
     "ng2-charts": "^6.0.1",
-    "ng2-pdf-viewer": "^6.4.0",
+    "ng2-pdf-viewer": "~6.4.0",
     "ngx-extended-pdf-viewer": "^14.5.3",
+    "ngx-loading": "^17.0.0",
     "nodemailer": "^6.9.14",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
