--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "node_modules/datatables.net-bs5/css/dataTables.bootstrap5.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "node_modules/leaflet/dist/leaflet.css",
               "src/styles.css"
             ],
             "scripts": [
