--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,4 @@ SECRET_TOKEN=catswillruletheworld
 PORT=3000
 EMAIL=your_email@gmail.com
 EMAIL_PASSWORD=your_email_password
+JWT_SECRET=your_jwt_secret_key
