--- a/package.json
+++ b/package.json
@@ -16,19 +16,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/cdk": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/elements": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/localize": "^14.2.0",
-    "@angular/material": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
-    "@canvasjs/angular-charts": "^1.2.0",
+    "@angular/animations": "^14.3.0",
+    "@angular/cdk": "^14.2.7",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/elements": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/localize": "^14.3.0",
+    "@angular/material": "^14.2.7",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@types/express": "^4.17.21",
@@ -39,7 +38,7 @@
     "@types/ws": "^8.5.4",
     "ajv": "8.11.0",
     "angular-datatables": "^14.0.2",
-    "angular2-signaturepad": "^3.0.4",
+    "angular2-signaturepad": "^4.0.2",
     "apexcharts": "^3.50.0",
     "arrive": "2.4.1",
     "bcryptjs": "^2.4.3",
@@ -51,18 +50,18 @@
     "chart.js": "^4.4.3",
     "chartist": "0.11.4",
     "classlist.js": "1.1.20150312",
-    "datatables.net": "^1.13.11",
-    "datatables.net-bs5": "^1.11.3",
+    "datatables.net": "^1.10.20",
+    "datatables.net-bs5": "~1.11.3",
     "datatables.net-buttons": "^2.3.4",
     "datatables.net-buttons-dt": "^2.3.4",
-    "datatables.net-dt": "^1.13.11",
+    "datatables.net-dt": "~1.10.20",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "eslint": "^8.11.0",
     "express": "^4.17.3",
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
-    "html-pdf-node": "^1.0.8",
+    "html-pdf-node": "^1.0.7",
     "html2canvas": "^1.4.1",
     "igniteui-angular-charts": "^18.0.0",
     "igniteui-angular-core": "^18.0.0",
@@ -73,11 +72,11 @@
     "moment": "^2.30.1",
     "mongoose": "^8.3.5",
     "multer": "^1.4.5-lts.1",
-    "ng-apexcharts": "^1.11.0",
+    "ng-apexcharts": "^1.7.4",
     "ng2-charts": "^6.0.1",
     "ng2-pdf-viewer": "~6.4.0",
     "ngx-extended-pdf-viewer": "^14.5.3",
-    "ngx-loading": "^17.0.0",
+    "ngx-loading": "^14.0.0",
     "nodemailer": "^6.9.14",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
@@ -86,8 +85,10 @@
     "rxjs": "~7.5.0",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
-    "sweetalert2": "^11.11.0",
+    "signature_pad": "^5.0.2",
+    "sweetalert2": "^11.6.13",
     "tesseract.js": "^5.1.0",
+    "text-encoding-utf-8": "^1.0.2",
     "tslib": "^2.3.0",
     "typescript": "^4.8.4",
     "web-animations-js": "2.3.2",
@@ -95,22 +96,24 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.7",
-    "@angular/cli": "~14.2.7",
-    "@angular/compiler-cli": "^14.2.0",
-    "@angular/language-service": "14.2.0",
+    "@angular-devkit/build-angular": "^14.2.13",
+    "@angular/cli": "^14.2.13",
+    "@angular/compiler-cli": "^14.2.13",
+    "@angular/language-service": "14.3.0",
     "@types/bootstrap": "4.5.0",
     "@types/chartist": "0.11.1",
-    "@types/datatables.net": "^1.10.6",
+    "@types/datatables.net": "~1.10.18",
     "@types/google.maps": "3.47.4",
     "@types/jasmine": "~4.0.0",
     "@types/jasminewd2": "~2.0.10",
     "@types/jquery": "^3.5.30",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^17.0.21",
-    "codelyzer": "6.0.2",
+    "codelyzer": "^0.0.28",
     "concurrently": "^8.2.2",
     "jasmine-core": "~4.4.0",
     "jasmine-spec-reporter": "~7.0.0",
+    "jwt-decode": "^4.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
@@ -118,9 +121,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "nodemon": "^3.1.4",
-    "protractor": "7.0.0",
+    "protractor": "^7.0.0",
     "sass": "1.32.13",
-    "ts-node": "~10.9.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   }
 }
