--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,10 @@
     "outDir": "../dist/server",
     "baseUrl": "",
     "module": "commonjs",
-    
-  }
-  
+    // "allowJs": true,
+    // "resolveJsonModule": true
+  },
+  // "ts-node": {
+  //   "esm": true
+  // }
 }
