--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,11 @@
     ],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "paths": {
+      "@angular/*":[
+        "../node_modules/@angular/*"
+      ]
+    }
   }
 }
