--- a/angular.json
+++ b/angular.json
@@ -8,6 +8,7 @@
       "sourceRoot": "src",
       "projectType": "application",
       "architect": {
+        
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
@@ -130,7 +131,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "material-dashboard-angular:build"
+            "browserTarget": "material-dashboard-angular:build",
+            "proxyConfig": "src/proxy.conf.json" 
           },
           "configurations": {
             "production": {
