--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ejs": "^3.1.10",
     "eslint": "^8.11.0",
     "express": "^4.17.3",
+    "file-saver": "^2.0.5",
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
     "html-pdf-node": "^1.0.7",
@@ -93,6 +94,7 @@
     "typescript": "^4.8.4",
     "web-animations-js": "2.3.2",
     "ws": "^8.17.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
