--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "bootstrap-notify": "3.1.3",
     "chart.js": "^4.4.3",
     "chartist": "0.11.4",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "classlist.js": "1.1.20150312",
     "datatables.net": "^1.10.20",
     "datatables.net-bs5": "~1.11.3",
