--- a/package.json
+++ b/package.json
@@ -81,7 +81,9 @@
     "ngx-image-cropper": "^6.0.3",
     "ngx-loading": "^14.0.0",
     "ngx-toastr": "^14.0.0",
+    "node-signpdf": "^3.0.0",
     "nodemailer": "^6.9.14",
+    "pdf-lib": "^1.17.1",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
     "puppeteer": "^22.11.1",
