--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@types/express": "^4.17.21",
     "@types/leaflet": "^1.9.12",
+    "@types/leaflet.markercluster": "^1.5.4",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
     "@types/sequelize": "^4.28.20",
@@ -71,6 +72,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "moment": "^2.30.1",
     "mongoose": "^8.3.5",
     "multer": "^1.4.5-lts.1",
